--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "django-rest-framework (>=0.1.0,<0.2.0)",
     "django-cors-headers (>=4.7.0,<5.0.0)",
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
-    "requests (>=2.32.5,<3.0.0)"
+    "requests (>=2.32.5,<3.0.0)",
+    "psycopg[binary] (>=3.2.10,<4.0.0)"
 ]
 
 
