--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "django-cors-headers (>=4.7.0,<5.0.0)",
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
     "requests (>=2.32.5,<3.0.0)",
-    "psycopg[binary] (>=3.2.10,<4.0.0)"
+    "psycopg[binary] (>=3.2.10,<4.0.0)",
+    "pytest (>=8.4.2,<9.0.0)"
 ]
 
 
